2025-12-21  Alexis Hildebrandt <afh@surryhill.net>

	* tmac/trans.tmac [PH]: Expose mm package's `Captc` string to
	translation.
	* tmac/cs.tmac:
	* tmac/de.tmac:
	* tmac/es.tmac:
	* tmac/fr.tmac:
	* tmac/it.tmac:
	* tmac/ru.tmac:
	* tmac/sv.tmac: Update string name and lexicographic sort.

	Begins fixing Savannah #67830.

2026-01-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.am (EXTRA_DIST): Ship
	"small-gnu-head.png" test artifact in distribution archive.

2026-01-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/using-diversion-as-character-works.sh:
	Fail hard (with status 99) if our test artifact isn't present.
	Continues commit 3f783091f0, 19 December 2024.

2026-01-02  Helmut Grohne <helmut@subdivi.de>

	* src/libs/libgroff/libgroff.am (install_charset_data): Don't
	ship a "charset.alias" file if it's empty or contains nothing
	but comments.  Such files, a common product of certain gnulib
	internals, aggrieve a Debian packaging assistance tool.

	Fixes <https://savannah.gnu.org/bugs/?67886>.

2026-01-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/groff_mdoc.7.man (Other possible pitfalls): Advise
	composers of mdoc(7) documents to use `\-` for copy-and-pastable
	hyphen-minus characters.

	Fixes <https://savannah.gnu.org/bugs/?67881>.  Thanks to Bjarni
	Ingi Gislason for pointing out incorrect usage in sudo(8).

2026-01-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/\
	double-do-request-does-not-raise-assertion.sh: Rename this...
	* src/roff/groff/tests/\
	double-do-request-does-not-fail-assertion.sh: ...to this.
	* src/roff/groff/groff.am (groff_TESTS): Track rename.

2026-01-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* gnulib: Refresh stable/2025-07 branch.  We need some
	recent fixes that have landed there.  See
	<https://lists.gnu.org/archive/html/bug-gnulib/2025-12/msg00158.html>
	and